[tool.poetry]
name = "bipp-data-hub"
version = "0.1.0"
description = "repository to continuously update the high value datasets in the Data Hub"
authors = ["gursharan-info <gursharan.info@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"